Blender Crash while loading baked data containing instances that hold empty collections #125419

Closed
opened 2024-07-25 15:32:37 +02:00 by Arye Ramaty · 5 comments
Contributor

System Information
Operating system: Linux-6.5.0-44-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.183.01

Blender Version
Broken: version: 4.3.0 Alpha, branch: main (modified), commit date: 2024-07-25 09:06, hash: b76603b6bf72
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when opening a blend file that loads baked data containing instances that hold empty collections.
Another way to phrase this would be: "Blender crashes while loading corrupted baked data, which was caused by baking empty collections as instances."

I've attached two blend files: one is a pre-bake file, and the other is a baked file with the baked data.
Blender crashes around 70% of the time when opening the 'Crash' blend file. If it doesn't crash, try scrubbing one of the node sockets to refresh the UI.

Exact steps for others to reproduce the error
Open the 'PreCrash' blend file
Bake the geometry node tree
Change any node property

**System Information** Operating system: Linux-6.5.0-44-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.183.01 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main (modified), commit date: 2024-07-25 09:06, hash: `b76603b6bf72` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when opening a blend file that loads baked data containing instances that hold empty collections. Another way to phrase this would be: "Blender crashes while loading corrupted baked data, which was caused by baking empty collections as instances." I've attached two blend files: one is a pre-bake file, and the other is a baked file with the baked data. Blender crashes around 70% of the time when opening the 'Crash' blend file. If it doesn't crash, try scrubbing one of the node sockets to refresh the UI. **Exact steps for others to reproduce the error** Open the 'PreCrash' blend file Bake the geometry node tree Change any node property
Arye Ramaty added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-25 15:32:38 +02:00
Member

Could not reproduce on 4.3 main atm...

Could not reproduce on 4.3 main atm...
Member

Broken: version: 4.3.0 Alpha, branch: main (modified)

Hi, it seems you're using build provided by distro package? Does it fail in official 4.3 buildbot build?: https://builder.blender.org/download/daily/

> Broken: version: 4.3.0 Alpha, branch: main (modified) Hi, it seems you're using build provided by distro package? Does it fail in official 4.3 buildbot build?: https://builder.blender.org/download/daily/
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-07-26 09:07:38 +02:00
Author
Contributor

It's also crashing in the non-modified version, I modify blender to debug better the .instance_reference attribute.
Here is a video with the PreCrash blend file:

It's also crashing in the non-modified version, I modify blender to debug better the .instance_reference attribute. Here is a video with the PreCrash blend file:
Author
Contributor

Be aware that you have to download the baked data (.json, .blon) and put them in the right path, otherwise, blender won't try to load the corrupted data.

Be aware that you have to download the baked data (.json, .blon) and put them in the right path, otherwise, blender won't try to load the corrupted data.
Author
Contributor

@ChengduLittleA @PratikPB2123 Can you reproduce using the same steps as in the video?

@ChengduLittleA @PratikPB2123 Can you reproduce using the same steps as in the video?
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2024-07-31 13:33:17 +02:00
Philipp Oeser changed title from Blender Crash while loading baked data to Blender Crash while loading baked data containing instances that hold empty collections 2024-08-05 10:00:09 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-13 14:10:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125419
No description provided.